tests/baselines/reference/metadataOfEventAlias(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
test.ts(4,12): error TS2564: Property 'event' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== event.ts (0 errors) ====
    export interface Event { title: string };
    
==== test.ts (1 errors) ====
    import { Event } from './event';
    function Input(target: any, key: string): void { }
    export class SomeClass {
        @Input event: Event;
               ~~~~~
!!! error TS2564: Property 'event' has no initializer and is not definitely assigned in the constructor.
    }